tests/compile-fail/semck/break-outside-while.rs
fn main() {
    break;  //! ERROR(2:5): `break` outside of loop
}